# linax

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  lint.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: lint.yaml  lint.yml  publish.yml  tests.yml
docs/: index.md
docs/examples/: .gitignore  01_introduction_&_classification.ipynb
examples/: basic_usage.py  train.ipynb
experiments/: analyze_sweep.py  condor_sweep.sub  generate_condor_jobs.py  run_job.sh  train.py
experiments/conf/: config.yaml
src/linax/: __init__.py  base.py  utils.py
src/linax/architecture/: __init__.py
src/linax/architecture/backbone/: base.py  linoss.py
src/linax/architecture/blocks/: __init__.py  base.py  linoss.py
src/linax/architecture/channel_mixers/: __init__.py  glu.py  swi_glu.py
src/linax/architecture/encoder/: __init__.py  base.py  embedding.py  linear.py
src/linax/architecture/heads/: __init__.py  base.py  classification.py  regression.py
src/linax/architecture/models/: __init__.py  base.py  linoss.py  ssm.py
src/linax/architecture/sequence_mixers/: __init__.py  base.py  linoss.py
src/linax/blocks/: __init__.py  lru.py  s5.py
src/linax/channel_mixers/: __init__.py  identity.py  mlp.py
src/linax/datasets/: __init__.py  mnist.py  transforms.py
src/linax/encoder/: base.py
src/linax/models/: __init__.py  linoss.py  lru.py  s5.py
src/linax/sequence_mixers/: __init__.py  identity.py  linoss.py  lru.py  s4d.py  s5.py
tests/: test_smoke.py
