[project]
name = "linax"
dynamic = ["version"]
description = "State Space Models in Jax"
readme = "README.md"
authors = [
  { name = "Benedict Armstrong" },
  { name = "Francesco Maria Ruscio" },
  { name = "Philipp Nazari" },
  { name = "Shlomo Libo Feigin" },
]
maintainers = [
  { name = "Benedict Armstrong" },
  { name = "Francesco Maria Ruscio" },
  { name = "Philipp Nazari" },
  { name = "Shlomo Libo Feigin" },
]
license = "MIT"
license-files = ["LICEN[CS]E.*"]
# keywords = []
# classifiers = []

requires-python = "==3.12.*"
dependencies = ["equinox>=0.13.2", "jax>=0.7.2", "jaxtyping>=0.3.3"]

[project.optional-dependencies]
cu12 = []
examples = [
    "ipykernel>=7.0.1",
    "optax>=0.2.6",
    "torchvision>=0.24.0",
]

[dependency-groups]
dev = [
  "pre-commit>=4.3.0",
  "ruff>=0.12.11",
  "pandas>=2.3.2",
  "ipykernel>=6.30.1",
  "pytest>=8.3.3",
  "optax"
]

# [project.urls]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/linax/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/linax"]

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = ["C", "E", "F", "I", "W", "D", "N"]
ignore = ["E741", "W605", "C408", "E402", "F722", "N806", "N803", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
