[project]
name = "linax"
dynamic = ["version"]
description = "State Space Models in Jax"
readme = "README.md"
authors = [
    { name = "Benedict Armstrong", email = "benedict.armstrong@inf.ethz.ch" },
    { name = "Francesco Maria Ruscio", email = "franciruscio@gmail.com" },
    { name = "Philipp Nazari", email = "philipp.nazari@tuebingen.mpg.de" },
]
maintainers = [
    { name = "Benedict Armstrong" },
    { name = "Francesco Maria Ruscio" },
    { name = "Philipp Nazari" },
]
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["jax", "equinox", "ssm", "state-space-models", "sequence-modeling", "neural-networks", "deep-learning", "machine-learning", "ml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]

requires-python = "==3.12.*"
dependencies = ["equinox>=0.13.2", "jax>=0.7.2", "jaxtyping>=0.3.3"]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.11",
    "pandas>=2.3.2",
    "ipykernel>=6.30.1",
    "pytest>=8.3.3",
]

examples = [
    "ipykernel>=7.0.1",
    "optax>=0.2.6",
    "torchvision>=0.24.0",
    "torch>=2.6.0",
    "matplotlib>=3.10.0",
]

cu12 = ["jax[cuda12]>=0.7.2"]

[project.urls]
Homepage = "https://camail.org/linax/"
Discord = "https://discord.gg/VazrGCxeT7"
Repository = "https://github.com/camail-official/linax"

[build-system]
requires = ["hatchling>=1.27.0", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version", version_scheme = "only-version" }


[tool.hatch.build.targets.wheel]
packages = ["src/linax"]

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = ["C", "E", "F", "I", "W", "D", "N"]
ignore = ["E741", "W605", "C408", "E402", "F722", "N806", "N803", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
